# Prototype

./: CMakeLists.txt  deck.h  player.h  pole.cpp  pole.h  position.cpp
lib/: card.h  hero.h  player.h  pole.h  position.h
src/: main.cpp  player.cpp  pole.cpp
